# ccswitch-cli

./: AGENTS.md  Cargo.toml  Dockerfile.test  Makefile  README.md
.github/workflows/: ci.yml  release.yml
.sisyphus/: ralph-loop.local.md
docs/: PLAN.md
scripts/: test-with-db.sh
src/: main.rs
src/commands/: current.rs  health.rs  list.rs  mod.rs  switch.rs
src/db/: mod.rs  models.rs
src/formatter/: ai.rs  human.rs  mod.rs
test-fixtures/: test.db
tests/: integration_test.rs
