[package]
name = "ccswitch-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for managing CC Switch providers"
license = "MIT"
repository = "https://github.com/FrankieeW/ccswitch-cli"
homepage = "https://github.com/FrankieeW/ccswitch-cli"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.36", features = ["serialize"] }
tabled = "0.16"
dirs = "5.0"
thiserror = "1.0"
chrono = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"